# obsidian-to-denote

./: .gitignore  LICENSE  README.md  pyproject.toml
obsidian-to-denote/: __init__.py  converter.py
obsidian_to_denote/: converter.py
tests/: conftest.py  test_cli.py  test_converter.py
