[project]
name = "obsidian-to-denote"
version = "0.1.0"
description = "Convert Obsidian markdown files to Denote format (org-mode or markdown)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Greg Newman", email = "greg@gregnewman.org"},
]
keywords = ["obsidian", "denote", "emacs", "org-mode", "markdown", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
obsidian-to-denote = "obsidian_to_denote.converter:main"
o2d = "obsidian_to_denote.converter:main"

[project.urls]
Homepage = "https://github.com/gregnewman/obsidian-to-denote"
Repository = "https://github.com/gregnewman/obsidian-to-denote.git"
Issues = "https://github.com/gregnewman/obsidian-to-denote/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C90", "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
